--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "prettier": "prettier --write \"./{src,e2e}/**/*.{ts,js,html,scss}\"",
     "prettier:check": "prettier --list-different \"./{src,e2e}/**/*.{ts,js,html,scss}\"",
     "postinstall": "npm run prettier -s",
-    "generate": "ng generate"
+    "generate": "ng generate",
+    "build-gh-pages": "npm run env -s && ng build --prod --base-href /planarlens/",
+    "deploy-gh-pages": "npx ngh"
   },
   "dependencies": {
     "@angular/animations": "^7.2.3",
@@ -41,19 +43,21 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.13.0",
     "@angular/cli": "~7.3.0",
     "@angular/compiler-cli": "^7.2.3",
     "@angular/language-service": "^7.2.3",
-    "@angular-devkit/build-angular": "^0.13.0",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@ngx-rocket/scripts": "^3.0.0",
     "@types/jasmine": "^3.3.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^8.10.13",
+    "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "^5.0.0",
     "hads": "^1.7.0",
     "htmlhint": "^0.11.0",
     "https-proxy-agent": "^2.0.0",
+    "husky": "^1.3.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -64,18 +68,17 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "karma-junit-reporter": "^1.2.0",
     "prettier": "^1.16.3",
-    "tslint-config-prettier": "^1.14.0",
-    "stylelint-config-prettier": "^5.1.0",
     "pretty-quick": "^1.10.0",
-    "husky": "^1.3.1",
     "protractor": "~5.4.0",
     "puppeteer": "^1.12.0",
     "stylelint": "~10.0.1",
+    "stylelint-config-prettier": "^5.1.0",
     "stylelint-config-recommended-scss": "~3.3.0",
     "stylelint-config-standard": "~18.3.0",
     "stylelint-scss": "~3.6.0",
     "ts-node": "~8.1.0",
     "tslint": "~5.16.0",
+    "tslint-config-prettier": "^1.14.0",
     "typescript": "~3.2.0"
   },
   "prettier": {
