--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "translations:extract": "ngx-translate-extract --input ./src --output ./src/translations/template.json --format=json --clean --sort --marker extract",
     "docs": "hads ./docs -o",
     "env": "ngx-scripts env npm_package_version",
-    "prettier": "prettier --write \"./{src,e2e}/**/*.{ts,js,html,scss}\"",
-    "prettier:check": "prettier --list-different \"./{src,e2e}/**/*.{ts,js,html,scss}\"",
-    "postinstall": "npm run prettier -s",
+    "prettier": "prettier --write \"./{src,e2e}/**/*.{ts,js,scss}\"",
+    "beautify": "js-beautify \"./{src,e2e}/**/*.html\"",
+    "format": "npm run prettier -s && npm run beautify",
+    "postinstall": "npm run format",
     "generate": "ng generate",
     "build-gh-pages": "npm run env -s && ng build --prod --base-href /planarlens/",
     "deploy-gh-pages": "npx ngh"
@@ -60,6 +61,7 @@
     "husky": "^1.3.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "js-beautify": "^1.10.0",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~2.0.0",
